<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.registerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etxt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/guideline21"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toTopOf="@+id/guideline19" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".72" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

        <Button
            android:id="@+id/bt_crear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/boton_redondo"
            android:text="@string/bt_Ccrear"
            app:layout_constraintBottom_toTopOf="@+id/guideline16"
            app:layout_constraintEnd_toStartOf="@+id/guideline33"
            app:layout_constraintStart_toStartOf="@+id/guideline18"
            app:layout_constraintTop_toTopOf="@+id/guideline15"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />


        <TextView
            android:id="@+id/txt_Cemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Cemail1"
            android:textColor="@color/letras"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline21"
            app:layout_constraintStart_toStartOf="@+id/guideline30"
            app:layout_constraintTop_toTopOf="@+id/guideline19" />

        <TextView
            android:id="@+id/txt_Cuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Cuser1"
            android:textColor="@color/letras"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline19"
            app:layout_constraintStart_toStartOf="@+id/guideline30"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.01
" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Cpasswore"
            android:textColor="@color/letras"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline30"
            app:layout_constraintTop_toTopOf="@+id/guideline21" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Cpasswore1"
            android:textColor="@color/letras"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintStart_toStartOf="@+id/guideline30"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <EditText
            android:id="@+id/etxt_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_User"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/guideline19"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toTopOf="@+id/guideline" />


        <EditText
            android:id="@+id/etxt_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_pass"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toTopOf="@+id/guideline21" />

        <EditText
            android:id="@+id/etxt_pass1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_pass"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="391dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nRegistro"
            android:textColor="@color/letras"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>