<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.detalleFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Detalle_Titulo"
            android:textColor="@color/letras"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline37"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline38" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/N_planta"
            android:textColor="@color/letras"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline39"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline37" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/H_Ambiente"
            android:textColor="@color/letras"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline46"
            app:layout_constraintStart_toStartOf="@+id/guideline44"
            app:layout_constraintTop_toTopOf="@+id/guideline41" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/H_Tierra"
            android:textColor="@color/letras"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline45"
            app:layout_constraintStart_toStartOf="@+id/guideline44"
            app:layout_constraintTop_toTopOf="@+id/guideline46" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/T_Tierra"
            android:textColor="@color/letras"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline47"
            app:layout_constraintStart_toStartOf="@+id/guideline44"
            app:layout_constraintTop_toTopOf="@+id/guideline45" />

        <TextView
            android:id="@+id/txt_phAmbiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/Porcentajes"
            android:textColor="@color/letras"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline46"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/guideline41" />

        <TextView
            android:id="@+id/txt_phTierra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/Porcentajes"
            android:textColor="@color/letras"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline45"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/guideline46" />

        <TextView
            android:id="@+id/txt_ptTierra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/letras"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/Porcentajes"
            app:layout_constraintBottom_toTopOf="@+id/guideline47"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/guideline45" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/defoult_planta"
            app:layout_constraintBottom_toTopOf="@+id/guideline40"
            app:layout_constraintEnd_toStartOf="@+id/guideline43"
            app:layout_constraintStart_toStartOf="@+id/guideline42"
            app:layout_constraintTop_toTopOf="@+id/guideline39" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10945274" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".95" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>